updates tv-show-api module3 crud

--- a/MODULE3/crud/react-crud-lab/package.json
+++ b/MODULE3/crud/react-crud-lab/package.json
@@ -13,7 +13,7 @@
     "web-vitals": "^1.1.2"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "react-scripts --openssl-legacy-provider start",
     "build": "react-scripts build",
     "test": "./node_modules/.bin/cypress open",
     "eject": "react-scripts eject"
