--- a/MODULE4/rest-middleware/bookmark-app/package.json
+++ b/MODULE4/rest-middleware/bookmark-app/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "rest-middleware",
+  "name": "bookmark-app",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
